--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="https://unpkg.com/vue@3"></script>
 
     <div id="app">
+        <div id="bg-top"></div>
+        <div id="bg-bottom"></div>
+        <main>
+            
+        </main>
         
     </div>
 
