--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 
                 <div class="input-chat flex">
                     <i class="fa-regular fa-face-smile"></i>
-                    <input type="text" name="write-text" id="write-text" placeholder="scrivi un messaggio" v-model="newMessage" @keyup.enter="sentNewMessage(newMessage,activeIndex)">
+                    <input type="text" name="write-text" id="write-text" placeholder="scrivi un messaggio" v-model="newMessage"
+                    @keyup.enter="sentNewMessage(newMessage,activeIndex)" >
                     <i class="fa-solid fa-microphone"></i>
                 </div>
 
