--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <div class="flex">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                    <input type="text" placeholder="cerca o inizia una nuova chat" v-model="search-contact">
+                    <input type="text" placeholder="cerca o inizia una nuova chat" v-model="searchContact">
                 </div>
                 
-                <div class="contacts flex" v-for="(contact,index) in contacts">
-                    <span v-if="contacts[index].name == search-contact">
+                <div class="contacts flex" v-for="(contact,index) in contacts" >
+                    <span :class="searchContacts(searchContact) ? '' : 'd-none'">
                         <div class="avatar-box">
                             <img :src="contacts[index].avatar" alt="contact avatar">
                         </div>
@@ -56,7 +56,7 @@
                             <span class="bold">{{ contacts[index].name }}</span>
                             <p></p>
                         </div>
-                    </span>   
+                    </span>
                 </div>
             </section>
 
