--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 
                 <div class="contacts flex" v-for="(contact,index) in contacts" >
-                    <span :class="searchContacts(searchContact) ? '' : 'd-none'">
+                    <span :class="searchContacts(searchContact,index) == true ? '' : 'd-none'" class="flex">
                         <div class="avatar-box">
                             <img :src="contacts[index].avatar" alt="contact avatar">
                         </div>
