--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@
                     <input type="text" placeholder="cerca o inizia una nuova chat" v-model="searchContact">
                 </div>
                 
-                <div class="contacts flex" v-for="(contact,index) in contacts" >
-                    <span :class="searchContacts(searchContact,index) == true ? '' : 'd-none'" class="flex">
-                        <div class="avatar-box">
-                            <img :src="contacts[index].avatar" alt="contact avatar">
-                        </div>
-                        <div class="contact-box" @click="changeActiveIndex(index)">
-                            <span class="bold">{{ contacts[index].name }}</span>
-                            <p></p>
-                        </div>
-                    </span>
+                <div id="container-contacts">
+                    <div class="contacts flex" v-for="(contact,index) in contacts" >
+                        <span :class="searchContacts(searchContact,index) == true ? '' : 'd-none'" class="flex">
+                            <div class="avatar-box">
+                                <img :src="contacts[index].avatar" alt="contact avatar">
+                            </div>
+                            <div class="contact-box" @click="changeActiveIndex(index)">
+                                <span class="bold">{{ contacts[index].name }}</span>
+                                <p></p>
+                            </div>
+                        </span>
+                    </div>
                 </div>
             </section>
 
@@ -84,7 +86,7 @@
 
                 <div class="input-chat flex">
                     <i class="fa-regular fa-face-smile"></i>
-                    <input type="text" name="write-text" id="write-text" placeholder="scrivi un messaggio" v-model="newMessage"
+                    <input type="text" id="write-text" placeholder="scrivi un messaggio" v-model="newMessage"
                     @keyup.enter="sentNewMessage(newMessage,activeIndex)" >
                     <i class="fa-solid fa-microphone"></i>
                 </div>
